# nge-cmake

./: .gitignore  CMakeGraphVizOptions.cmake  CMakeLists.txt  README.md  clean.bat  generate_all.bat  graphviz_make.bat  make_all.bat  make_efdexplorer.bat  open_vs_all.bat  run_tests.bat
cmake/: CMakePrintTargetProperties.cmake  PrintAllVariables.cmake  PrintTargetProperties.cmake  ext.cmake  include_cmn_libs.cmake
myidl/src/: CMakeLists.txt  Greeter.h  stdafx.h
myidl/tests/: CMakeLists.txt  Main.cpp
source.basic/: CMakeLists.txt
source.basic/third_party_usage/: 3rdparty.cpp  CMakeLists.txt
source.basic/utils/: CMakeLists.txt
source.basic/utils/include/: utils.h
source.basic/utils/src/: utils.cpp
source.res_dll/: CMakeLists.txt  resource.h  resource.rc
source.res_dll_loader/: CMakeLists.txt  res_dll_loader.cpp
source.slv/: CMakeLists.txt
source.slv/efd_solver/: CMakeLists.txt  efd_solver.cpp
source.slv/viewer/: CMakeLists.txt
source.slv/viewer/include/vwr/: vwr_module.h
source.slv/viewer/src/dll/: vwr_module.cpp
source.slv/viewer/src/include/: vis_params.h
source.slv/viewer/src/lib/: CMakeLists.txt  vis_params.cpp
source.slv/viewer/src/tests/: CMakeLists.txt  vis_tests.cpp
source.ui/: CMakeLists.txt
source.ui/efd_explorer/: CMakeLists.txt  efd_explorer.cpp
source.ui/feature_gui/: CMakeLists.txt  feature_gui.cpp
source.ui/feature_gui/include/: feature_gui.h
source.ui/gui_res/: CMakeLists.txt  resource.rc
source.ui/prop_mng/: CMakeLists.txt
source.ui/prop_mng/include/: CMakeLists.txt
source.ui/prop_mng/include/pm_gui/: IPMPage.h  pm_gui.h  pm_gui_mfc.h  pm_gui_win.h
source.ui/prop_mng/src/mfc/: CMakeLists.txt  PMPage.cpp  pm_gui_mfc.cpp  pm_gui_mfc.rc  resource.h
source.ui/prop_mng/src/win/: CMakeLists.txt  PMPage.cpp  PMPage.h  pm_gui_win.cpp
source.x/: CMakeLists.txt
source.x/idl/: CMakeLists.txt
source.x/idl/src/: CMakeLists.txt  Export.def  Greeter.h
source.x/idl/tests/: CMakeLists.txt
